# langchain_update_10_hours

./: README.md  pyproject.toml  requirements.txt
updated_langgraph_rag/: 0-base_rag.ipynb  1_conditional_retrieval.ipynb  2_tool_use_retrieval.ipynb
updatedlangchain/: 1_langchain_intro.ipynb  2_modelintegration.ipynb  3_streaming _and_batch.ipynb  4_tools.ipynb  5_messages.ipynb  6_structured_output.ipynb  7_middleware.ipynb  8_human_in_the_loop_middleware.ipynb
updatedlanggrapg/BasicChatBot/: 1-basicchatbot.ipynb  2-HumanInTheLoop.ipynb  practive_tool_calling.ipynb
updatedlanggrapg/RAG/: 1_rag.ipynb
